--- a/class9.html
+++ b/class9.html
@@ -8,7 +8,7 @@
     <button class="btn">Click Me</button>
     <br/><br/><br/>
     <div class="parent">
-      <button class="child">BUTTON</button>
+      <button class="child">BUTTON CLICK</button>
     </div>
   </body>
 </html>
